--- a/app/views/users/mailer/reset_password_instructions.html.erb
+++ b/app/views/users/mailer/reset_password_instructions.html.erb
@@ -2,7 +2,7 @@
     <div class="container">
         <a href="https://omniscientdesign.fr" target="_blank" class="link-logo">
             <div class="header">
-            <%= image_tag "logo.svg", alt: "", class: "od-logo-mail" %>
+            <%= image_tag "https://omniscientdesign.fr/assets/logo-5f9563d53291c7e3651389d7832d992152042c902dfef9315b2f4314f21ec247.svg", alt: "", class: "od-logo-mail" %>
             <span class="logo-text">Omniscient <br> Design</span>
         </div>
       </a>
