--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -5,7 +5,6 @@
     <meta charset="UTF-8" />
     <style>
       body {
-        background-color: #f4f4f4;
         font-family: "IBM Plex Sans", Arial, sans-serif;
         margin: 0;
         padding: 0;
@@ -244,7 +243,7 @@
     </style>
   </head>
 
-  <body>
+  <body style="background-color: #f4f4f4;">
     <%= yield %>
   </body>
 </html>
