Ajout d'un footer

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -373,7 +373,7 @@
 </script>
 
 <script>
-document.addEventListener("DOMContentLoaded", () => {
+ document.addEventListener("turbo:load", () => {
   let offsets = { oeuvres: 10, designers: 10 };
 
   function setupLoadMore(buttonId, listId) {
@@ -411,7 +411,7 @@ document.addEventListener("DOMContentLoaded", () => {
 });
 </script>
 <script>
-document.addEventListener("DOMContentLoaded", () => {
+ document.addEventListener("turbo:load", () => {
   const selectedDesigners = new Set();
   const selectedOeuvres = new Set();
 
