--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,6 +40,7 @@
 @import "components/popup";
 @import "components/progressbar";
 
+@import "layout/footer";
 @import "layout/header";
 @import "layout/search";
 
