--- a/app/assets/stylesheets/pages/_presentation.scss
+++ b/app/assets/stylesheets/pages/_presentation.scss
@@ -373,14 +373,14 @@
   }
 }
 
-footer {
-  padding: 48px 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+// footer {
+//   padding: 48px 0;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
 
-  p {
-    font-weight: 500;
-    color: $primary-color;
-  }
-}
+//   p {
+//     font-weight: 500;
+//     color: $primary-color;
+//   }
+// }
