--- a/app/assets/stylesheets/pagination.css
+++ b/app/assets/stylesheets/pagination.css
@@ -14,4 +14,7 @@
 .pagination a:hover,
 .pagination .current {
     font-weight: 500;
+    text-underline-offset: 4px;
+    text-decoration: underline;
+    text-decoration-thickness: 2px;
 }
