--- a/app/assets/stylesheets/components/_listcard.scss
+++ b/app/assets/stylesheets/components/_listcard.scss
@@ -1,5 +1,4 @@
-@import 'abstracts/variables';
-
+@import "abstracts/variables";
 
 .list-card {
   background-color: $secondary-color;
@@ -15,10 +14,9 @@
   position: relative;
 
   &:hover {
-    background-color: #EDEDED;
+    background-color: #ededed;
     cursor: pointer;
   }
-
 }
 
 .list-card div {
@@ -31,7 +29,7 @@
   font-size: 16px;
 }
 
-@media screen and (min-width:0px) and (max-width:500px) {
+@media screen and (min-width: 0px) and (max-width: 500px) {
   .list-card {
     font-size: 15px;
     padding: 20px;
@@ -41,7 +39,6 @@
     }
   }
 }
-
 
 body.dark-mode {
   .list-card {
