--- a/app/views/users/mailer/reset_password_instructions.html.erb
+++ b/app/views/users/mailer/reset_password_instructions.html.erb
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
   </head>
   <body style="margin:0; padding:0; background-color:#f4f4f4; font-family:Arial, sans-serif;">
-
     <table align="center" width="680" cellpadding="0" cellspacing="0" style="margin:40px auto; background:#ffffff; border-radius:12px;">
       <tr>
         <td style="padding:40px;">
@@ -13,7 +12,7 @@
           <a href="https://omniscientdesign.fr" target="_blank" style="text-decoration:none; color:#202020;">
             <table cellpadding="0" cellspacing="0">
               <tr>
-                <td><img src="https://omniscientdesign.fr/assets/logo-mail.png" alt="Omniscient Design" width="55" style="display:block; border:0;" /></td>
+                <td><img src="https://omniscientdesign.fr/assets/mail-logo.png" alt="Omniscient Design" width="55" style="display:block; border:0;" /></td>
                 <td style="padding-left:12px; font-size:24px; font-weight:600; color:#202020;">
                   Omniscient<br/>Design
                 </td>
@@ -22,7 +21,8 @@
           </a>
 
           <!-- Titre -->
-          <h2 style="font-size:28px; text-transform:uppercase; margin:30px 0 20px 0; color:#202020;">
+          <p style="margin:50px 0 20px 0;"><%= t("mailer.reset_password.welcome") %></p>
+          <h2 style="font-size:28px; text-transform:uppercase; color:#202020;">
             <%= t("mailer.reset_password.title") %>
           </h2>
 
@@ -70,7 +70,7 @@
                 <!-- Réseaux sociaux -->
                 <table align="center" cellpadding="0" cellspacing="0" style="margin-bottom:24px;">
                   <tr>
-                    <td><a href="https://omniscientdesign.fr/" target="_blank"><img src="https://omniscientdesign.fr/assets/link.png" alt="Site" width="40" style="display:block;border:0;"></a></td>
+                    <td><a href="https://omniscientdesign.fr/" target="_blank"><img src="https://omniscientdesign.fr/assets/link.png" alt="Site" width="30" style="display:block;border:0;"></a></td>
                     <td style="width:10px;"></td>
                     <td><a href="https://www.instagram.com/omniscientdesign_/" target="_blank"><img src="https://omniscientdesign.fr/assets/instagram.png" alt="Instagram" width="40" style="display:block;border:0;"></a></td>
                     <td style="width:10px;"></td>
@@ -84,9 +84,9 @@
 
                 <!-- Liens légaux -->
                 <p style="text-align:center; font-size:14px; margin:0 0 16px 0; color:#202020;">
-                  <a href="https://omniscientdesign.fr/mentionslegales" style="color:#202020; text-decoration:underline;">Mentions légales</a> |
-                  <a href="https://omniscientdesign.fr/politiquedeconfidentialite" style="color:#202020; text-decoration:underline;">Politique</a> |
-                  <a href="https://omniscientdesign.fr/cgu" style="color:#202020; text-decoration:underline;">CGU</a>
+                  <a href="https://omniscientdesign.fr/mentionslegales" style="color:#202020; text-decoration:underline;"><%= t("mailer.reset_password.legales") %></a> |
+                  <a href="https://omniscientdesign.fr/politiquedeconfidentialite" style="color:#202020; text-decoration:underline;"><%= t("mailer.reset_password.politique") %></a> |
+                  <a href="https://omniscientdesign.fr/cgu" style="color:#202020; text-decoration:underline;"><%= t("mailer.reset_password.cgu") %></a>
                 </p>
 
                 <!-- Copyright -->
