--- a/app/views/users/mailer/email_changed.html.erb
+++ b/app/views/users/mailer/email_changed.html.erb
@@ -7,11 +7,13 @@
   <div class="container" style="max-width:680px; margin:40px auto; background:#ffffff; border-radius:12px; padding:40px;">
 
     <!-- Logo -->
-    <a href="https://omniscientdesign.fr" target="_blank" class="link-logo" style="text-decoration:none; color:#202020;">
-      <div class="header" style="display:flex; align-items:center;">
-        <%= image_tag "https://omniscientdesign.fr/assets/logo-5f9563d53291c7e3651389d7832d992152042c902dfef9315b2f4314f21ec247.svg", alt: "", class: "od-logo-mail", style:"width:55px; height:auto;" %>
-        <span class="logo-text" style="font-size:24px; font-weight:600; padding-left:12px; color:#202020;">Omniscient <br>Design</span>
-      </div>
+    <a href="https://omniscientdesign.fr" target="_blank" style="text-decoration:none; color:#202020;">
+      <table cellpadding="0" cellspacing="0">
+        <tr>
+          <td><img src="https://omniscientdesign.fr/assets/mail-logo.png" alt="Omniscient Design" width="55" style="display:block; border:0;" /></td>
+          <td style="padding-left:12px; font-size:24px; font-weight:600; color:#202020;">Omniscient<br/>Design</td>
+        </tr>
+      </table>
     </a>
 
     <!-- Texte d’introduction -->
