--- a/app/views/list_mailer/invite_editor.html.erb
+++ b/app/views/list_mailer/invite_editor.html.erb
@@ -12,9 +12,7 @@
         <a href="https://omniscientdesign.fr" target="_blank" style="text-decoration:none; color:#202020;">
           <table cellpadding="0" cellspacing="0">
             <tr>
-              <td>
-                <%= image_tag "https://omniscientdesign.fr/assets/logo-5f9563d53291c7e3651389d7832d992152042c902dfef9315b2f4314f21ec247.svg", alt: "", width:55, style:"display:block; border:0;" %>
-              </td>
+              <td><img src="https://omniscientdesign.fr/assets/mail-logo.png" alt="Omniscient Design" width="55" style="display:block; border:0;" /></td>
               <td style="padding-left:12px; font-size:24px; font-weight:600; color:#202020;">
                 Omniscient<br/>Design
               </td>
