--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -9,6 +9,113 @@
   <h1>Rapport de mise à jour</h1>
 </section>
 <section class="grid-1">
+
+  <h2>Mise à jour du 6 octobre 2025</h2>
+  <h3>Nouveautés et corrections</h3>
+  <p>• Ajout d'un footer.<br>
+     • Corrections de bugs JavaScript.<br>
+     • Indication visuelle pour voir si une référence ou un designer est sélectionné dans les listes.<br>
+     • Correction de la sélection des dates pour la frise chronologique.</p>
+
+  <h2>Mise à jour du 5 octobre 2025</h2>
+  <h3>Nouveautés</h3>
+  <p>• Refonte des miniatures.<br>
+     • Corrections de la barre de progression sur l’ajout de références et designers.</p>
+
+  <h2>Mise à jour du 4 octobre 2025</h2>
+  <h3>Corrections</h3>
+  <p>• Correction des bugs d’affichage des sources dans l’édition des références et des designers.<br>
+     • Ajout d’un mail personnalisé.</p>
+
+  <h2>Mise à jour du 3 octobre 2025</h2>
+  <h3>Nouveautés</h3>
+  <p>• Modifications des icônes des domaines.<br>
+     • Ajout des traductions.<br>
+     • Correction du partage de liste.</p>
+
+  <h2>Mise à jour du 28 septembre 2025</h2>
+  <h3>Corrections</h3>
+  <p>• Corrections des erreurs JavaScript.</p>
+
+  <h2>Mise à jour du 27 septembre 2025</h2>
+  <h3>Nouveautés</h3>
+  <p>• Ajout d’un plan du site.<br>
+     • Correction du loader pour être en plein écran.</p>
+
+  <h2>Mise à jour du 23 septembre 2025</h2>
+  <h3>Corrections</h3>
+  <p>• Suppression du système de parrainage.<br>
+     • Correction du reCAPTCHA.</p>
+
+  <h2>Mise à jour du 22 septembre 2025</h2>
+  <h3>Corrections</h3>
+  <p>• Corrections des effets de hover.<br>
+     • Rework du switch designer/référence sur la homepage.</p>
+
+  <h2>Mise à jour du 18 septembre 2025</h2>
+  <h3>Optimisation</h3>
+  <p>• Optimisation du système de recherche.</p>
+
+  <h2>Mise à jour du 17 septembre 2025</h2>
+  <h3>Nouveautés</h3>
+  <p>• Réimport des références.</p>
+
+  <h2>Mise à jour du 15 septembre 2025</h2>
+  <h3>Corrections</h3>
+  <p>• Correction du CSS du loader.<br>
+     • Ajustement du scroll sur la homepage (Lancement officiel de la bêta).</p>
+
+  <h2>Mise à jour du 8 septembre 2025</h2>
+  <h3>Corrections</h3>
+  <p>• Corrections des scripts JavaScript et optimisation.</p>
+
+  <h2>Mise à jour du 24 août 2025</h2>
+  <h3>Nouveautés</h3>
+  <p>• Ajout du kit de presse.<br>
+     • Modifications des domaines.</p>
+
+  <h2>Mise à jour du 5 août 2025</h2>
+  <h3>Corrections</h3>
+  <p>• Corrections mineures diverses.</p>
+
+  <h2>Mise à jour du 5 juin 2025</h2>
+  <h3>Optimisation</h3>
+  <p>• Optimisation du SEO.</p>
+
+  <h2>Mise à jour du 4 juin 2025</h2>
+  <h3>Nouveautés</h3>
+  <p>• Fonction recherche des assets sans erreur.</p>
+
+  <h2>Mise à jour du 25 mai 2025</h2>
+  <h3>Corrections</h3>
+  <p>• Correction d’erreurs liées à GSAP.<br>
+     • Ajout du dark mode.</p>
+
+  <h2>Mise à jour du 19 mai 2025</h2>
+  <h3>Nouveautés</h3>
+  <p>• Ajout de miniatures pour les références et les designers.</p>
+
+  <h2>Mise à jour du 24 avril 2025</h2>
+  <h3>Corrections</h3>
+  <p>• Correction du scroll horizontal dans les références.</p>
+
+  <h2>Mise à jour du 21 avril 2025</h2>
+  <h3>Corrections</h3>
+  <p>• Gestion des cookies améliorée.<br>
+     • Ajustements CSS du formulaire d’ajout d’une référence.<br>
+     • Correction de l’affichage des notions.<br>
+     • Correction de l’autocomplétion.</p>
+
+  <h2>Mise à jour du 2 mars 2025</h2>
+  <h3>Corrections</h3>
+  <p>• Suppression de la page recherche par catégorie.<br>
+     • Déplacement de la page recherche dans l’arborescence du site.</p>
+
+  <h2>Mise à jour du 26 février 2025</h2>
+  <h3>Nouveautés</h3>
+  <p>• Refonte complète de la page de recherche.<br>
+     • Optimisation des ressources utilisées par la page.</p>
+
   <h2>Mise à jour du 24 février 2025</h2>
   <h3>Corrections</h3>
   <p>• Correction du processus de suppression des <span class="black medium">références</span> et des <span class="black medium">designers</span>.<br>
